# zapret-manager

./: .editorconfig  .gitattributes  .gitignore  BASELINE.md  Cargo.toml  HANDOFF_PROMPT.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-windows.yml  ci.yml  release.yml
app/frontend/: index.html  package.json
app/tauri/: Cargo.toml  build.rs  tauri.conf.json
app/tauri/capabilities/: default.json
app/tauri/src/: main.rs  service_client.rs
app/tauri/src/commands/: diagnostics.rs  disable.rs  enable.rs  logs.rs  mod.rs  profiles.rs  recovery.rs  settings.rs  status.rs  updates.rs
core/: Cargo.toml
core/src/: app_state.rs  config.rs  diagnostics.rs  engine_manifest.rs  errors.rs  hash_check.rs  lib.rs  logs.rs  profile_schema.rs  profiles.rs  revert_plan.rs  snapshot.rs  strategy_updater.rs  trusted_sources.rs  update_manifest.rs  vpn_conflict.rs
docs/: ARCHITECTURE.md  DIAGNOSTICS.md  ENGINE_POLICY.md  INSTALLATION.md  PROJECT_CONTEXT.md  RECOVERY.md  REMOTE_TESTING.md  REVERT_POLICY.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  UPDATE_POLICY.md  UPDATE_RELEASE_FLOW.md  WEB_STRATEGIES.md  WINDOWS_SERVICE.md
engine/: README.md  manifest.json
engine/local/: service.bat  web (TELEGRAM).bat  web (WHATSAPP).bat
installer/windows/: install-service.ps1  repair.ps1  setup.nsi  uninstall-service.ps1
profiles/: common.json  discord.json  profile.schema.json  telegram.json  whatsapp.json  youtube.json
scripts/: build.ps1  clean.ps1  package.ps1  verify-engine.ps1  verify-strategies.ps1
service/: Cargo.toml
service/src/: connectivity_check.rs  diagnostics.rs  dns_check.rs  engine_runner.rs  engine_supervisor.rs  logging.rs  main.rs  profile_runner.rs  recovery.rs  revert.rs  service.rs  service_api.rs  state_snapshot.rs
strategies/: manifest.json  strategy.schema.json
strategies/experimental/: common.json  (+4 more)
tests/: diagnostics.test.ts  engine_manifest.test.ts  manifest_validation.test.ts  profile_validation.test.ts  remote_harness.test.ts  startup_state.test.ts  strategy_validation.test.ts  tauri_resources.test.ts  web_strategy.test.ts
(+34 files in other folders)
