[workspace]
members = [
  "core",
  "service",
  "app/tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/zapret-manager"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.14"
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
