[package]
name = "zapret-manager-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.2"
zapret-manager-core = { path = "../../core" }
