[package]
name = "zapret-manager-tauri"
version = "1.2.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
zapret-manager-core = { path = "../../core" }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
